--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
     --without: #fff;
     --grey: #F4F4FD;
     --footerhover: #31D0AA;
+    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 *{
     margin: 0;
@@ -117,6 +118,28 @@ body {
 .auth-nav a:focus{
     color: var(--hover);
 }
+.site-item{
+    position: relative;
+}
+.site-item::after{
+    content: '';
+    
+    position: absolute;
+    left: 0;
+    bottom: 0;
+
+    display: block;
+    width: 100%;
+    height: 4px;
+    background: var(--hover);
+
+    opacity: 0;
+    transition: opacity 250ms var(--timing-function);
+}
+.site-item:hover::after{
+    opacity: 1;
+    
+}
 /* Hero */
 .hero{
     background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
@@ -163,6 +186,42 @@ body {
 .hero-button:focus{
     background: var(--hover);
 }
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(46, 47, 66, 0.4);
+}
+
+.is-hidden{
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal{
+    min-width: 408px;
+    min-height: 576px;
+    background-color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+} 
+.close-hero{
+    margin-left: 360px;
+    margin-top: 24px;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);;
+}
+
 /* Company's quality */
 .quality-section{
     padding-top: 120px;
@@ -488,3 +547,45 @@ body {
 .work-type{
     margin-top: 8px;
 }
+.work-item{
+    overflow: hidden;
+    position: relative;
+}
+.work-item::before{
+    content: '';
+    display: inline-block;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--primary_brand);
+    transform: translateY(+100%);
+
+    transition: transform 250ms var(--timing-function);
+}
+.work-item:hover::before{
+    transform: translateY(0);
+
+}
+.image-text p{
+    position: absolute;
+    display: inline-block;
+
+    top: 0;
+    left: 0;
+    width: 296px;
+    height: 96px;
+    padding-top: 40px;
+    padding-left: 32px;
+    padding-bottom: 240px;
+    color: var(--without);
+    
+
+    opacity: 0;
+}
+.image-text:hover p{
+    opacity: 1;
+}
+    
