--- a/css/style.css
+++ b/css/style.css
@@ -220,17 +220,15 @@ body {
     width: 24px;
     height: 24px;
     border-radius: 50%;
-    border: 1px solid rgba(0, 0, 0, 0.1);;
-}
-.close-hero:hover{
-    background-color: var(--hover);
+    border: 1px solid rgba(0, 0, 0, 0.1);
 }
 .modal-close-bottom-icon{
     width: 24px;
     height: 24px;
+    fill: var(--hover);
 }
 .modal-close-bottom-icon:hover{
-    color: var(--without);
+    fill: var(--without);
 }
 /* Company's quality */
 .quality-section{
