--- a/css/style.css
+++ b/css/style.css
@@ -223,12 +223,13 @@ body {
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
 .modal-close-bottom-icon{
-    width: 24px;
-    height: 24px;
+    width: 8px;
+    height: 8px;
     fill: var(--hover);
 }
 .modal-close-bottom-icon:hover{
     fill: var(--without);
+    background-color: var(--hover);
 }
 /* Company's quality */
 .quality-section{
