--- a/css/style.css
+++ b/css/style.css
@@ -110,36 +110,53 @@ body {
     text-decoration: none;
     line-height: 1.5;
     color: var(--body_text);
-    transition: clar 250ms var(--timing-function);
 }
 .auth-nav a:hover{
     cursor: pointer;
     color: var(--hover);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .auth-nav a:focus{
     color: var(--hover);
 }
 .site-item{
     position: relative;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .site-item::after{
     content: '';
     
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: -1px;
 
     display: block;
     width: 100%;
     height: 4px;
     background: var(--hover);
+    border-radius: 2px;
 
     opacity: 0;
     transition: opacity 250ms var(--timing-function);
 }
 .site-item:hover::after{
-    opacity: 1;
+   opacity: 1; 
     
+}
+.current{
+    position: relative;
+}
+.current:before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    display: block;
+    width: 100%;
+    height: 4px;
+    background: var(--hover);
+    border-radius: 2px;
+    opacity: 1;
 }
 /* Hero */
 .hero{
@@ -179,6 +196,7 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-button:hover{
     background: var(--hover);
@@ -354,6 +372,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .worker-soc-link:hover{
     background-color: var(--hover);
@@ -385,6 +404,7 @@ body {
     border: 1px solid #8E8F99;
     border-radius: 4px;
     margin-left: 24px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customer-item:first-child{
     margin-left: 0;
@@ -471,6 +491,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .site-soc-link:hover{
     background-color: var(--footerhover);
@@ -507,6 +528,7 @@ body {
     border: 1px solid #E7E9FC;
     border-radius: 4px;
     color: var(--primary_brand);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-text:hover{
     background: var(--hover);
