--- a/css/style.css
+++ b/css/style.css
@@ -244,6 +244,7 @@ body {
     height: 24px;
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .close-hero:hover{
     cursor: pointer;
